--- a/phases-innovations-services/package.json
+++ b/phases-innovations-services/package.json
@@ -25,13 +25,15 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "eslintConfig": {
     "extends": [
